Fixed styling on projects: text was breaking container and not responsive.

--- a/todo-react/src/components/projects/projects.css
+++ b/todo-react/src/components/projects/projects.css
@@ -15,6 +15,8 @@
 	margin-left : 1.2rem;
 	font-size : 1.15rem;
 	font-weight : 700;
+	max-width : 80%;
+	overflow-wrap: break-word;
 }
 
 .projectsH2
@@ -148,10 +150,7 @@
 	padding : 5px;
 }
 
-#projectButton
-{
-	border : none;
-}
+
 
 .iconStyle
 {
@@ -160,9 +159,27 @@
 	justify-content : center;
 }
 
-#projectContainer
+
+.project
 {
-	padding : 15px 25px;
+	margin : .5rem;
+	max-width : 90%;
+}
+
+
+.projectButton
+{
+	border : none;
+	padding : 1.5rem 1.0rem;
+	border-radius : .75rem;
+	overflow-wrap : break-word;
+	max-width : 100%;
+}
+
+#projectButton a
+{
+	display : inline-block;
+	overflow-wrap : word-break;
 }
 
 #editProject
@@ -173,11 +190,6 @@
 	box-shadow : 10px 10px 15px black;
 	display : flex;
 
-}
-
-.project *
-{
-	border : none;
 }
 
 #controlButtons
